--- a/app/src/main/res/layout/template_tag_search.xml
+++ b/app/src/main/res/layout/template_tag_search.xml
@@ -48,12 +48,13 @@
         <TextView
             android:id="@+id/tag_following_btn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="16dp"
             android:clickable="true"
             android:focusable="true"
+            android:gravity="center"
+            android:paddingStart="12dp"
+            android:paddingEnd="12dp"
             android:text="@string/following"
             android:textAllCaps="true"
             android:textSize="12sp"
